renamed ark mode css file and fixed login dark mode

--- a/popularity_assessor/static/css/dark-mode.css
+++ b/popularity_assessor/static/css/dark-mode.css
@@ -5,13 +5,13 @@ html body .container {
 
 /* General text and background */
 body, html {
-    background-color: #121212; /* Dark background */
-    color: #ffffff; /* Light text */
+    background-color: #121212 !important; /* Dark background */
+    color: #ffffff !important; /* Light text */
 }
 
 /* Headers, footers, and other sections */
 .header, .footer, .section {
-    background-color: #262626; /* Slightly lighter dark background */
+    background-color: #121212; /* Slightly lighter dark background */
     color: #ffffff;
 }
 
@@ -37,7 +37,7 @@ html, body {
 }
 
 .card {
-    background-color: #262626;
+    background-color: #121212;
     color: #ffffff;
 }
 
@@ -102,12 +102,12 @@ a, a:hover, a:focus, a:active {
 }
 
 .modal-content {
-    background-color: #262626;
+    background-color: #121212;
     color: #fff;
 }
 
 .row {
-    background-color: #000000; 
+    background-color: #121212; 
 }
 
 p {
